--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="about-img">
-                            <img src="img/IMG-20221111-WA0032-removebg-preview (1).png" alt="Image">
+                            <img src="img/about.jpg" alt="Image">
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -94,7 +94,7 @@
                             </div>
                             <div class="about-text">
                                 <p>
-                                    Titulaire d'un Master 1 en gestion des entreprises, j'ai acquis des connaissances fondamentales en marketing traditionnel. Actuellement, je me forme en tant que référent digital afin de compléter mes compétences dans le domaine numérique.                                </p>
+                                    Titulaire d'un Master 1 en gestion des entreprises, j'ai acquis des connaissances fondamentales en marketing traditionnel. Actuellement, je me forme en tant que référent digital afin de compléter mes compétences dans le domaine numérique.           </p>
                             </div>
                             <div class="skills">
                                 <div class="skill-name">
@@ -203,7 +203,7 @@
         <div class="experience" id="experience">
             <div class="container">
                 <header class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
-                    <p>My Resume</p>
+                    <p>Mon Résumé</p>
                     <h2>Mes Formations</h2>
                 </header>
                 <div class="timeline">
@@ -213,7 +213,7 @@
                             <h2>Marketing digital</h2>
                             <h4>Youth Hub, Nord Foire</h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                                Je suis en mesure de mesurer les résultats des actions marketing et d'ajuster les stratégies en conséquence, afin d'obtenir des performances optimales.
                             </p>
                         </div>
                     </div>
@@ -223,7 +223,7 @@
                             <h2>Acculturation du Numérique</h2>
                             <h4>Simplon Sénégal, Cité Keur Gorgui</h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                                je suis capable de contribuer à la transformation des petites entreprises en proposant des solutions numériques la communication.
                             </p>
                         </div>
                     </div>
@@ -233,7 +233,7 @@
                             <h2>Master1 Gestion des Entreprises</h2>
                             <h4>FASEG, UCAD, Fann</h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                                Je suis en mesure d'analyser l'environnement concurrentiel d'une entreprise, d'identifier les opportunités et les menaces, et d'dentifier lesforces et les faiblesses.
                             </p>
                         </div>
                     </div>
@@ -243,7 +243,7 @@
                             <h2>Licence3 Gestion des Entreprises</h2>
                             <h4></h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                            J'ai appris à faire des états financiers, évaluer la rentabilité d'un projet, gérer le budget de l'entreprise, élaborer des prévisions financières.
                             </p>
                         </div>
                     </div>
@@ -253,40 +253,31 @@
                             <h2>Licence2 Gestion</h2>
                             <h4>FASEG, UCAD, Fann</h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                                J'ai appris différent matiére en gestiondes entreprises comme la comptabilité, la finance, la gestion des ressources humaines etc.
                             </p>
                         </div>
                     </div>
                     <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
-                        <div class="timeline-text">
-                            <div class="timeline-date">2018 - 2019</div>
-                            <h2>Licence2 Gestion</h2>
-                            <h4>FASEG, UCAD, Fann</h4>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="timeline-item right wow slideInLeft" data-wow-delay="0.1s">
                         <div class="timeline-text">
                             <div class="timeline-date">2017 - 2018</div>
                             <h2>Licence1 Gestion</h2>
                             <h4>FASEG, UCAD, Fann</h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                                J'ai appris différent matiére en gestiondes entreprises comme la comptabilité, la finance, la gestion des ressources humaines etc. 
                             </p>
                         </div>
                     </div>
-                    <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
+                    <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                         <div class="timeline-text">
                             <div class="timeline-date">2016 - 2018</div>
                             <h2>Baccalauréat</h2>
                             <h4>CMTM</h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                                Aprés mon bac j'ai été orienté à léuniversité CHEIKH Anta Diop de DAKAR à la faseg pour siuvre une formation gestion. 
                             </p>
                         </div>
                     </div>
+                    
                 </div>
             </div>
         </div>
@@ -445,7 +436,7 @@
                     </div>
                 </div>
                 <div class="container copyright">
-                    <p>&copy; <a href="#">Your Site Name</a>, All Right Reserved | Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
+                    <p>&copy; <a href="#">BS PORTFOLIO</a>, All Right Reserved | Bouyo Sarr<a href="https://htmlcodex.com">HTML Codex</a></p>
                 </div>
             </div>
         </div>
