--- a/index.html
+++ b/index.html
@@ -428,15 +428,12 @@
                         </div>
                         <div class="footer-social">
                             <a href=""><i class="fab fa-twitter"></i></a>
-                            <a href=""><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://web.facebook.com/bouyo.sarr.9"><i class="fab fa-facebook-f"></i></a>
                             <a href=""><i class="fab fa-youtube"></i></a>
                             <a href=""><i class="fab fa-instagram"></i></a>
-                            <a href=""><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.linkedin.com/in/bouyo-sarr-523a32222/"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
-                </div>
-                <div class="container copyright">
-                    <p>&copy; <a href="#">BS PORTFOLIO</a>, All Right Reserved | Bouyo Sarr<a href="https://htmlcodex.com">HTML Codex</a></p>
                 </div>
             </div>
         </div>
